Fixed chrome background color flicker bug

--- a/client/scss/_variables.scss
+++ b/client/scss/_variables.scss
@@ -14,7 +14,7 @@ Colors and other global constants are defined in this file.
 
 // greys
 $grey: #878483;
-$ebb: #E9E2E2;
+$ebb: #E5DEDE;
 $spring-wood: #F6F2F0;
 
 // greens
