--- a/client/scss/breakpoints/_768up.scss
+++ b/client/scss/breakpoints/_768up.scss
@@ -8,9 +8,9 @@ These Styles should be applied to screens 768px and above only
 
 ******************************************************************/
 
-html, body {
-  overflow: auto;
-}
+// html, body {
+//   overflow: auto;
+// }
 
 $toolbar-height : 50px;
 // main body (everything excluding header)
